@@ -20,7 +20,7 @@ class Test:
         self.filename = ""
         self.minimum_qt_version = 500
         self.maximum_qt_version = 999
-        self.minimum_clang_version = 370
+        self.minimum_clang_version = 380
         self.compare_everything = False
         self.isFixedFile = False
         self.link = False # If true we also call the linker
@@ -57,7 +57,7 @@ class Test:
 class Check:
     def __init__(self, name):
         self.name = name
-        self.minimum_clang_version = 370 # clang 3.7.0
+        self.minimum_clang_version = 380 # clang 3.8.0
         self.minimum_qt_version = 500
         self.maximum_qt_version = 999
         self.enabled = True
